# 02.homework

./: .gitignore  CMakeLists.txt  chunk.h  chunk.h.in  custom_allocator.cpp  custom_list.h  main.cpp  readme.md
.github/workflows/: release.yaml
src/: allocation_strategy.h  allocator.h  chunk.h  chunk.h.in  factorial.cpp  factorial.h  my_list.h
